# TomoATT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_install_HDF5.md  TomoATT_code_20240523.rar  debug_mpi.sh  input_params_GJI_RealData.yml  install_mpi_and_hdf5_local.sh  install_mpi_and_hdf5_local_clang.sh  install_mpi_and_hdf5_local_intel.sh
.github/scripts/: run_install.sh  run_test.sh  run_test_1.sh
.github/workflows/: CI.yml  cmake.yml  cmake.ymlbak
build_old2/: CMakeCache.txt  Makefile  TOMOATT  cmake_install.cmake  input_params_proj1_Crust1.0_location.yml  time.txt
build_old2/external_libs/: Makefile  cmake_install.cmake
cuda/: cuda_constants.cuh  cuda_initialize.cuh  cuda_utils.cu  cuda_utils.cuh  grid_wrapper.cu  grid_wrapper.cuh  iterator_wrapper.cu  iterator_wrapper.cuh
cuda_bak/: cuda_constants.cuh  cuda_initialize.cuh  cuda_utils.cu  grid_wrapper.cu  iterator_wrapper.cuh
docs/: class_diagram  mpi_group_explanation
docs/manual/: index.md  usage_on_HPCs.md
docs/mpi_diagram/: earthquake_relocation
examples/: README.md  clean_examples.sh  test.txt
examples/0_generate_files_for_TomoATT/: 1_build_initial_model.ipynb  1_build_initial_model.py  2_build_checkerboard_model.ipynb  2_build_checkerboard_model.py  2_build_checkerboard_model.sh  3_generate_src_rec_file.ipynb  3_generate_src_rec_file.py  4_src_rec_visulization.ipynb  4_src_rec_visulization_pygmt_is_needed.ipynb  README.md  run_this_example.sh  src_rec_visulization_pygmt_is_needed.ipynb  src_rec_visulization_pygmt_is_needed.py
examples/0_generate_files_for_tests/: 2_build_checkerboard_model.ipynb
examples/10_data_process_practice/: alg1a_select_data_in_region.ipynb  alg1b_select_data_in_region_with_rotation.ipynb  alg2_retain_reliable_traveltime.ipynb  alg3_limit_min_Ndata.ipynb  alg4_add_weight.ipynb  alg5_generate_differential_traveltime.ipynb  alg6_ratain_earthquake_wrt_azimuth.ipynb  alg7_assign_gaussion_noise.ipynb  alg7_assign_gaussion_noise_to_data.ipynb  alg8_assign_uniform_noise_to_earthquake.ipynb
examples/11_result_evaluation_practice/: fig1_residual_histogram.ipynb  fig2_model_visualization.ipynb
examples/12_tele_loc_joint/: params_inv.yaml  run.bash
examples/1_forward_accuracy_1st_upwind_isotropic/: README.md  compare_src_rec.ipynb  compare_src_rec.py  run_this_example.sh
examples/1_output_visualization/: 1_build_initial_model.ipynb  2_build_checkerboard_model.ipynb  3_generate_src_rec_file.ipynb  4_field_visualization.ipynb  P1_plot_abs_velocity.ipynb  P2_plot_dv_xi_eta_FVD.ipynb  P3_plot_T_Tadj.ipynb  P4_plot_sensitivity_kernel.ipynb  P5_plot_kernel_density.ipynb  P6_plot_intermediate_model.ipynb  P8_plot_data_residual(refer to Eg2).ipynb  P9_plot_inversion_grid.ipynb  old1_build_initial_model.ipynb  run_this_example.sh
examples/2_src_rec_data_read/: README.md  compare_src_rec.ipynb  compare_src_rec.py  make_test_model.ipynb  make_test_model.py  params_log.yaml  run_this_example.sh  time.txt
examples/3_forward_accuracy_1st_cuthill_isotropic/: README.md  make_test_model.ipynb  run_this_example.sh
examples/3_use_different_types_of_data_in_model_update/: run_this_example.sh
examples/4_forward_accuracy_3rd_cuthill_isotropic/: README.md  compare_src_rec.py  run_this_example.sh
examples/5_use_different_types_of_data_in_model_update/: README.md  compare_src_rec_obj.ipynb  compare_src_rec_obj.py  make_test_model.ipynb  params_log.yaml  run_this_example.sh  time.txt
examples/6_checkerboard_inversion_test/: 1_generate_input_params.ipynb  2_run_this_example.sh  3_plot_ckb_model.ipynb  4_plot_inversion_result.ipynb  P1_plot_initial_model.ipynb  P2_plot_ckb_model.ipynb  P3_plot_final_model.ipynb  README.md  assign_gaussian_noise.py  plot_ckb_model.ipynb  plot_inversion_result.ipynb  plot_model.ipynb  run_this_example.sh
examples/6_simple_ckb_inversion_test/: README.md  make_test_model.ipynb  model_visualization.ipynb  model_visualization.py  params_log.yaml  run_this_example.sh  time.txt  数据检查.ipynb
examples/7_earthquake_location_test/: 1_generate_input_params.ipynb  2_run_it_for_synthetic_data.sh  2_run_this_example.sh  4_compare_location_result.ipynb  4_run_it_for_relocation.sh  5_compare_location_result.ipynb  5_plot_location_result.ipynb  6_plot_location_result.ipynb  README.md  compare_location_result.ipynb  compare_location_result_cluster.ipynb  generate_syn_obs_src_rec_data.ipynb  generate_syn_obs_src_rec_data.py  generate_syn_obs_src_rec_data_cluster.ipynb  make_test_model.py  plot_location_result.ipynb  run_this_example.sh  run_this_example_cluster.sh
examples/8_location_and_tomography/: 1_generate_input_params.ipynb  2_run_it_for_synthetic_data.sh  2_run_this_example.sh  (+15 more)
external_libs/: CMakeLists.txt
include/: 1d_models.h  GaussEliminationWithPivoting.hpp  Matrix.hpp  config.h  eikonal_solver_2d.h  grid.fwd.h  grid.h  input_params.h  inv_grid.h  io.fwd.h  io.h  io_sac.h  iterator.h  iterator_legacy.h  iterator_level.h  iterator_selector.h  kernel.h  lbfgs.h  main_routines_calling.h  main_routines_earthquake_relocation.h  main_routines_inversion_mode.h  model_optimization_routines.h  model_update.h  mpi_funcs.h  objective_function_utils.h  receiver.h  simd_conf.h  smooth.h  smooth_descent_dir.h  smooth_grad_regul.h  source.fwd.h  source.h  src_rec.h  timer.h  utils.h  vectorized_sweep.h  version.h.in
singularity/: Dockerfile  Dockerfile_singularity_on_centos6  Dockerfile_singularity_on_centos6_cuda10.1  Dockerfile_singularity_on_ubuntu16  README.md  openmpi.def  tomoatt.def  tomoatt_cuda.def
src/: SRCREC_TEST.cxx  SrcRecWeight.cxx  TOMOATT.cxx  TOMOATT_2d_precalc.cxx  TOMOATT_NN.cxx  TOMOATT_km.cxx  TOMOATT_solver_only.cxx  eikonal_solver_2d.cpp  grid.cpp  input_params.cpp  inv_grid.cpp  io.cpp  io_sac.cpp  iterator.cpp  iterator_legacy.cpp  iterator_level.cpp  main.cpp  receiver.cpp  source.cpp  src_rec.cpp
test/: clean_test.sh  plot_time.ipynb  run_test.sh
tests/: read_write_srcrec.cxx
utils/: compare_models.py  convert_param_file_2to3.py  find_2_bytes_chars.py  params_model_v3.yaml  src_rec_file_helper.py  tomoatt_data_retrieval.py
(+867 files in other folders)
